# astatine-os

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCES.md  GOVERNANCE.md  LICENSE  MODEL_CARD.md  Makefile  NOTICE  README.md  REUSE.toml  SECURITY.md  commit_message_v0.1.1.txt  mkdocs.yml  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
astatine_os/: __init__.py  api.py  config.py  exceptions.py  logging.py  version.py
astatine_os/cli/: __init__.py  main.py
astatine_os/data/: __init__.py  aoi.py  cache.py  io_raster.py  io_vector.py  stac.py
astatine_os/data/providers/: __init__.py  base.py  buildings_open_buildings.py  buildings_osm.py  era5_land.py  landsat.py  sentinel2.py  street_kartaview.py  street_mapillary.py
astatine_os/features/: __init__.py  spectral_indices.py  street_scene.py  tiling.py  urban_morphology.py
astatine_os/graph/: __init__.py  build_graph.py  physics_proxies.py  schemas.py
astatine_os/models/: __init__.py  gnn.py  heads.py  inference.py  losses.py  vision_backbones.py
astatine_os/reporting/: __init__.py  recommendations.py  report_md.py
astatine_os/training/: __init__.py  datamodules.py  eval.py  sweep.py  train.py
docs/: api.md  data_sources.md  index.md  licensing.md  methodology.md  reproducibility.md
docs/javascripts/: mathjax.js
docs/tutorials/: quickstart.md
examples/: istanbul_besiktas_demo.py
tests/integration/: test_analyze_pipeline.py  test_live_optional.py
tests/unit/: test_config.py  test_graph_builder.py  test_provider_mocking.py  test_spectral_indices.py  test_tiling.py
tools/: policy_check.py
