# SPDX-License-Identifier: EUPL-1.2
# Copyright (c) 2026 Astatine OS Contributors

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "astatine-os"
version = "0.1.0"
description = "Neighborhood-scale urban micro heat island and ventilation barrier analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "EUPL-1.2" }
authors = [{ name = "Astatine OS Contributors" }]
keywords = ["urban-climate", "geospatial", "microclimate", "heat-island", "ventilation", "graph-neural-network"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "dask>=2024.8.0",
  "distributed>=2024.8.0",
  "fsspec>=2024.6.0",
  "geopy>=2.4.0",
  "networkx>=3.2.0",
  "numpy>=1.26.0",
  "orjson>=3.10.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "PyYAML>=6.0.0",
  "requests>=2.31.0",
  "shapely>=2.0.0",
  "xarray>=2024.6.0",
  "zarr>=2.17.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "cyclonedx-bom>=4.0.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "reuse>=4.0.0",
  "ruff>=0.6.0",
  "types-requests>=2.31.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "pymdown-extensions>=10.8.0",
]
gpu = [
  "torch>=2.3.0",
  "timm>=1.0.0",
  "torch-geometric>=2.5.0",
  "pytorch-lightning>=2.2.0",
  "torchmetrics>=1.4.0",
]
all = [
  "black>=24.8.0",
  "cyclonedx-bom>=4.0.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "pymdown-extensions>=10.8.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytorch-lightning>=2.2.0",
  "reuse>=4.0.0",
  "ruff>=0.6.0",
  "timm>=1.0.0",
  "torch>=2.3.0",
  "torch-geometric>=2.5.0",
  "torchmetrics>=1.4.0",
  "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/olaflaitinen/astatine-os"
Repository = "https://github.com/olaflaitinen/astatine-os"
Documentation = "https://olaflaitinen.github.io/astatine-os"
Issues = "https://github.com/olaflaitinen/astatine-os/issues"

[project.scripts]
astatine-os = "astatine_os.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["astatine_os"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
exclude = ["docs/", "build/", "dist/"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
disable_error_code = ["import-untyped"]
